Fix popup z-index

--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @import "./styles/mixins.scss";
 
 .layout {
+  z-index: 1;
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: 2.5rem 1fr;
@@ -73,6 +74,7 @@
 }
 
 .popup {
+  z-index: 2;
   position: fixed;
   right: 0;
   bottom: 0;
